--- a/docs/404.md
+++ b/docs/404.md
@@ -1,10 +1,6 @@
 ---
-# example 404.md
-
-layout: default
+# 404.md
 permalink: /404.html
+redirect_to:
+  - http://anaflightsim.com/404.html
 ---
-
-# Page Not Found
-
-Unfortunately we were unable to find the page you requested. It could be the page doesn't exist or only exists for a specific version of these documents so please use the search feature to see if you are able to locate the information you were after.
